# essence

./: .gitignore  README.md  mix.exs  start_docker.sh
config/: config.exs
lib/: anoncreds.ex  crypto.ex  did.ex  indy.ex  ledger.ex  non_secrets.ex  pairwise.ex  payments.ex  pool.ex  wallet.ex
lib/indy/: pool.ex
lib/mix/tasks/: new_component.ex
lib/wallet/: config.ex  credentials.ex  export_config.ex  import_config.ex
native/essence/: Cargo.toml  Cargo.toml.2
native/essence/src/: lib.rs
native/essence/src/api/: anoncreds.rs  crypto.rs  did.rs  ledger.rs  mod.rs  non_secrets.rs  pairwise.rs  payments.rs  pool.rs  wallet.rs
native/essence/src/utils/: callbacks.rs  ex_results.rs  mod.rs  results.rs
native/libindy/src/api/: pool.rs
native/name/src/: lib.rs1
native/pool/: Cargo.toml  README.md
native/pool/src/: did.rs  lib.rs  lib.rs1  pool.rs  results.rs
native/pool/src/utils/: mod.rs
native/wallet/: Cargo.toml  README.md
native/wallet/src/: callbacks.rs  lib.rs
test/indy/: pool_test.exs  wallet_test.exs
