[package]
name = "essence"
version = "0.1.0"
authors = []

[lib]
name = "essence"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.18.0"
rustler_codegen = "0.18.0"
lazy_static = "1.0"
libc = "0.2"
serde_json = "1.0.26"
indy = { path = "/home/ubuntu/indy-sdk/libindy/" }
bytes = "0.4.10"
